@@ -163,14 +163,7 @@ public class AcademicTaxServices {
             return data.getEnrolmentDate();
         }
 
-        // TODO ANIL 2023-02-16: This is applied with a temporary fix flag
-        //
-        // Remove as soon as everyone accepts the fix
-        if(AcademicTreasurySettings.getInstance().getFixAcademicTaxEmolumentEnrolmentDate()) {
-            return new LocalDate();
-        } else {
-            return executionYear.getBeginLocalDate();
-        }
+        return new LocalDate();
     }
 
     @Atomic
